# VANTAGE

./: .gitattributes  .gitignore  .gitmodules  ClassTesting.m  DeblurImage.m  EdgeOutlineDetection.m  FindCentroid.m  FindCubeSatPixels.m  OpticalScript.py  PlotTOFPointClouds.m  README.md  RewriteDataStructVelocity.m  VANTAGE.asv  VANTAGE.m  VANTAGE_Wrapper.m  VANTAGE_main.m  VANTAGE_main.m~  Validate.m  detectObjects.m  executeParallel.m  findCorners.m  minboundrect.m  test.m  test.txt  truthCorrections_matGenerator.m
+VANTAGE/: README.txt.txt
+VANTAGE/+Model/: Model.m
+VANTAGE/+Optical/: Optical.m  OpticalTest.m
+VANTAGE/+PostProcessing/: CubeSat.m  CubeSat_Optical.m  CubeSat_TOF.m  Deployer.m  Model.m  Optical.m  OpticalTest.m  TFtest.m  TOF.m  TimeManager.m  Transform.m  Validate.m  testTOFhardcode.m
+VANTAGE/+TOF/: TOF.m
+VANTAGE/+Test/: execute_TOF_Test.m  suite.m  suitePostProcessing.m
+VANTAGE/+Transform/: Transform.m
+Validate/: TOFpresentErrorsVsReqs.m  validateOptical.m  validateTOF.m  validateVantage.m
1-TOF/CDR Centroid Detection/: CDR_TOF_initialize.m  CDR_TOF_main.m  TOF_centroid.m  untitled.m
2-Transform/: Transform.m  test_transform_main.m
3 - Optical/: smoothBoundaries.m
3-Optical/: CameraFOV.m  DeblurImage.m  EdgeOutlineDetection.m  EdgeOutlineDetection_Video.m  FindCentroid.m  FindCentroid_Video.m  I_binarized.mat  createEdgeImage.m  detectObjects.m  distanceerror.mat  errorAnalysis.m  findBoundingRectangles.m  findBoundingRectangles_Video.m  grabFrames.m  minboundrect.m  minboundrect_Video.m  plotBoundingCentroid.m  plotEdgeCentroid.m  smoothBoundaries.m
4-Sensor Fusion/CDR Sensor Fusion/: CDR_Sensor_Fusion_main.m  CleanError.mat  FakeManifest.xlsx  calculateVelocity.m  checkDeploymentPredictions.m  fusionCentroid.m
Automation/: AutomatedDataCapture.m  imageruntest2.m  socket_vantage.py
Automation/OpticalCamExamples/: ForFun  ForFun.py  Optical_Data_Capture.py  SimpleLive_Pyueye_OpenCV.py
Automation/OpticalCam_Automation/: Optical_Data_Capture.py  Optical_Single_Frame.py  SimpleLive_Pyueye_OpenCV.py
Automation/PiComms/: Manifest.json  Manifesto.json  main.m  test.m
Automation/TOF_Automation/: CalibDataCollection.m  PlotTOFPointClouds.m  TOFCal.m
Automation/ToF_Automation_Cpp/: single_image_save.cpp
Automation/ToF_Automation_Cpp/ifm3d-examples/: CMakeLists.txt
Automation/ToF_Automation_Cpp/ifm3d-examples/file_io/: CMakeLists.txt  single_image_save.cpp
Config/: Manifest.json  Optical.json  OpticalTest.json  OpticalTesting.json  Sensors.json  TOF.json  ToF_hardware_config.json  Transform.json
DoxygenDocs/: MatlabDocMaker.m  MatlabDocMaker.m~  docGenDriver.m
DoxygenDocs/README/: README.html  doc_gen_driver_8m_source.html
DoxygenDocs/config/: Doxyfile.template  README.md  developers.c  mtocpp  mtocpp.conf  mtocpp_post
DoxygenDocs/output/: _cube_sat_8m.html  _cube_sat_8m_source.html  _cube_sat___optical_8m.html  _cube_sat___optical_8m_source.html  _cube_sat___t_o_f_8m.html  _cube_sat___t_o_f_8m_source.html  _deployer_8m.html  _deployer_8m_source.html  _matlab_doc_maker_8m.html  _matlab_doc_maker_8m_source.html  _model_8m.html  _model_8m_source.html  _optical_8m.html  _optical_8m_source.html  _plot_cube_sats_8m.html  _plot_cube_sats_8m.js  _plot_cube_sats_8m_source.html  _plot_t_o_f_point_clouds_8m.html  _plot_t_o_f_point_clouds_8m.js  _plot_t_o_f_point_clouds_8m_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _rewrite_data_struct_velocity_8m.html  _rewrite_data_struct_velocity_8m.js  _rewrite_data_struct_velocity_8m_source.html  _t_ftest_8m.html  _t_ftest_8m.js  _t_ftest_8m_source.html  _t_o_f_8m.html  _t_o_f_8m_source.html  _test___fusion_8m.html  _test___fusion_8m_source.html  _test___optical_8m.html  _test___optical_8m_source.html  _test___t_o_f_8m.html  _test___t_o_f_8m_source.html  _time_manager_8m.html  _time_manager_8m_source.html  _transform_8m.html  _transform_8m_source.html  (+418 more)
MiscTools/: PlotCubeSats.m
PythonTest/: executeParallelTest.m  test1.py  test2.py
TestingScripts/: VANTAGE_Wrapper.m
TruthDataProcessing/: AnalyzeTest.m  GPSExpected.mat  README.md  VICON_err.mat  _gitignore.txt  dataExtract100m.m  garbage.m  importTruthData.m  importVICONData.m  livePlot.m  murder.m  niceErrorPlot.m  plotGPSData.m  plotTruthData.m  rubbish.m  saveMeSomeFigs.m  trash.m
config/: Manifest.json
(+1059 files in other folders)
